結合テストコードの対応